Solutions for Day15, Day16 of 2022 + Util.combinations + update README